--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,5 +36,8 @@ jobs:
           USERNAME: ${{ secrets.USERNAME }}
           PORT: ${{ secrets.PORT }}
           KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: ls
+          script: |
+            docker stop $(docker ps -q --filter ancestor=ablaszkiewicz/kiedy-kolos-backend )
+            docker pull ablaszkiewicz/kiedy-kolos-backend
+            docker run -d -p 3000:3000 ablaszkiewicz/kiedy-kolos-backend
           
