--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,30 +6,25 @@ on:
       - 'main'
 
 jobs:
-  docker:
+  main:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: ablaszkiewicz/kiedy-kolos-backend:latest
-      -
-        name: Update image inside VPS
+      - name: Update image inside VPS
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -40,4 +35,3 @@ jobs:
             docker stop $(docker ps -q --filter ancestor=ablaszkiewicz/kiedy-kolos-backend )
             docker pull ablaszkiewicz/kiedy-kolos-backend
             docker run -d -p 3000:3000 ablaszkiewicz/kiedy-kolos-backend
-          
