--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - 'main'
 
 jobs:
-  Build and push:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
@@ -24,7 +24,7 @@ jobs:
         with:
           push: true
           tags: ablaszkiewicz/kiedy-kolos-backend:latest
-  Update VPS container:
+  update-VPS-container:
     runs-on: ubuntu-latest
     steps:
       - name: Update image inside VPS
