--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.1.1",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.1.1",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
