--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           script: |
             docker stop $(docker ps -q --filter ancestor=ablaszkiewicz/kiedy-kolos-backend )
             docker pull ablaszkiewicz/kiedy-kolos-backend
-            docker run --env JWT_SECRET=${{secrets.JWT_SECRET}} -d -p 3001:3001 ablaszkiewicz/kiedy-kolos-backend
+            docker run --env JWT_SECRET=${{secrets.JWT_SECRET}} DB_HOST=${{secrets.DB_HOST}} DB_PORT=${{secrets.DB_PORT}} DB_USERNAME=${{secrets.DB_USERNAME}} DB_PASSWORD=${{secrets.DB_PASSWORD}} DB_DATABASE=${{secrets.DB_DATABASE}} -d -p 3001:3001 ablaszkiewicz/kiedy-kolos-backend
