--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
     "@nestjs/platform-express": "^8.1.1",
+    "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
     "mysql2": "^2.3.3",
     "neo4j-driver": "^4.4.1",
@@ -36,10 +37,11 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
     "sqlite3": "^5.0.2",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.1.3",
+    "@nestjs/cli": "^8.2.0",
     "@nestjs/schematics": "^8.0.4",
     "@nestjs/testing": "^8.1.1",
     "@types/express": "^4.17.13",
