--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "mysql2": "^2.3.3",
     "neo4j-driver": "^4.4.1",
     "passport": "^0.5.2",
