Remove JWT secret from test stage

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install modules
         run: npm install
       - name: Run tests
-        run: JWT_SECRET=${{ secrets.JWT_SECRET }} npm run test:e2e
+        run: JWT_SECRET=test npm run test:e2e
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
