--- a/package.json
+++ b/package.json
@@ -28,13 +28,12 @@
     "@nestjs/platform-express": "^8.1.1",
     "@nestjs/swagger": "^5.2.0",
     "@nestjs/typeorm": "^8.0.3",
+    "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "google-auth-library": "^8.0.2",
     "mysql2": "^2.3.3",
     "neo4j-driver": "^4.4.1",
     "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
